Fixed a wrapping issue that allowed content to overflow left.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,7 +4,7 @@
     align-items: center;
     flex-shrink: 0;
     overflow-x: auto;
-    white-space: nowrap;
+    white-space: pre-wrap;
     background: url('https://images-assets.nasa.gov/image/GSFC_20171208_Archive_e002039/GSFC_20171208_Archive_e002039~medium.jpg') repeat-x;
     height: 1080px;
     width: auto;
@@ -28,6 +28,7 @@
     margin-left: 50px;
     margin-right: 50px;
     padding-right: 250px;
+    gap: 50px;
 }
 
 .space-content-title {
